src/main/java/com/demo/test/error/AgeOutOfBound.java
package com.demo.test.error;

public class AgeOutOfBound extends Exception{
	public AgeOutOfBound(){
		System.out.println("sorry,age out of bound");
	}
}
